tests/baselines/reference/invalidUnicodeEscapeSequance.errors.txt
tests/cases/compiler/invalidUnicodeEscapeSequance.ts(1,8): error TS1127: Invalid character.


==== tests/cases/compiler/invalidUnicodeEscapeSequance.ts (1 errors) ====
    var arg\u003
           
!!! error TS1127: Invalid character.